--- a/src/app/components/address/address.component.html
+++ b/src/app/components/address/address.component.html
@@ -4,13 +4,14 @@
     <div class="div-row">
         <button class="btn btn-primary" *ngIf="!showSearchBar" (click)="showSearchBar = true">Search Address</button>
         <input type="text" *ngIf="showSearchBar" [(ngModel)]="searchAddressText" class="form-control" placeholder="search address" (input)="attemptSearch()">
+        <button class="btn btn-dark" *ngIf="addressResults.length" (click)="addressResults = []">Clear List</button>
     </div>
     <div class="div-row" style="height: 30px; position: relative;">
 
         <div *ngIf="addressResults.length" class="address-result-list">
             <h3 >Add Address?</h3>
 
-            <div class="address-result" *ngFor="let a of addressResults">
+            <div class="address-result" *ngFor="let a of addressResults" (click)="postAddress(a)">
                 <h4><u>Country: {{ a.country }}</u></h4>
                 <p>{{ a.address1 }}</p>
                 <p *ngIf="a.address2">{{ a.address2 }}</p>
