--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -39,15 +39,17 @@
             <p>Welcome to TrecApps. To begin using our services in earnest, we need to ensure you are who you say you are.</p>
             <p>The process is short and is as follows:</p>
             <ol>
-                <li>Verify Your Email (after that, you can set a Profile Picture)</li>
-                <li>Request Verification.</li>
-                <li>Upload Proof of Identity. These are pictures that our employees will use to validate your Identity. Only they (and you) will have access to them!</li>
+                <li>Verify Your Email</li>
+                <li>Request Verification. (Note: this can be done by contactng the site creater and providing him your User ID)</li>
+                <li style="text-decoration: line-through;">Upload Proof of Identity. These are pictures that our employees will use to validate your Identity. Only they (and you) will have access to them!</li>
             </ol>
             <p>Once you are verified, you can perform tasks such as</p>
             <ul>
-                <li>Create Brand Accounts that you can use in most services</li>
-                <li>Set up Subscriptions</li>
+                <li>Set a Profile Picture</li>
+                <li>Create a Profile on Coffeeshop</li>
+                <li>Set up Subscriptions (Soon)</li>
                 <li>Upload pictures of your recent trip to Hawaii</li>
+                <li style="text-decoration: line-through;">Create Brand Accounts that you can use in most services</li>
             </ul>
         </div>
 
